--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,19 @@ body {
     flex-direction: column;
 }
 
+.video-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+}
+
+video {
+    width: 100%;
+    max-width: 600px; /* Adjust as needed */
+    height: auto; /* Maintain aspect ratio */
+}
+
+
 /* Password Box Styling */
 .password-box {
     text-align: center;
